checker/tests/output/records/ill-typed/bad-records-14.stella
ERROR_UNEXPECTED_RECORD
